<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".TSAPP">
    <item android:id="@+id/login" android:title="@string/login"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/visitante" android:title="Sou visitante"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/agenda" android:title="@string/agenda"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/membros" android:title="@string/membros"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/projetos" android:title="@string/projetos"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/empresa" android:title="@string/empresa"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sair" android:title="@string/sair"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
